--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Avis.help</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="shortcut icon" type="image/x-icon" href="imgs/avislogo-07.png">
   <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="fonts/font-awesome.css">
@@ -48,9 +49,9 @@
 
   </div>
 
-  <script src="js/vue.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue-scrollto"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="https://unpkg.com/axios@0.19.0/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue-scrollto"></script>
   <script src="js/coockie_handler.js"></script>
   <script src="js/stomp.js"></script>
   <script src="js/script.js"></script>
